[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_rand = { version = "0.7.1", features = ["wyrand"] }
leafwing-input-manager = "0.15.1"
rand = "0.8.5"

#
#   Recommended optimizations
#

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
strip = "debuginfo"
